# raft-chat

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  ui.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: channel.rs  lib.rs
