[workspace]
name = "raft-chat"
version = "0.1.0"
edition = "2024"

members = [
    "server",
    "client",
    "shared"
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
eyre = "0.6"
color-eyre = "0.6.3"
