[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shared = { path = "../shared" }
eyre = { workspace = true }
color-eyre = { workspace = true }
crossterm = "0.27.0"
chrono = "0.4"
